# askl

./: .ackrc  .dockerignore  .env  .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  default.nix  devenv.nix  diesel.toml  flake.nix
.github/workflows/: askld-docker.yml
.sqlx/: query-0650fa85029caffb1e97103e5936c523da07b74f3da8cf709149c239466179be.json  query-07d4a98cc7b487c39071de184112a3aac5e99de66c7144fb461cac232d2ff9ce.json  query-16f5258b3363d638455e4e7223be084d5fcc4b81af915f2859aa62adf706aba8.json  query-1d44eea7a53281ed6bb2da4f102a20e19f42964c9498bcfaba0b33c1e788d06e.json  query-1ddaee1070ec66f5f15c6c9b202597b3bf7543c9bae4cbdc538ad0ca34d94ca0.json  query-242f906c82ada8329cca83078e0406892cbf1a7d5f52b2ca82906a84caf18add.json  query-3888b81de0a80753f53d12cd9aedbf579254114c842df1d5342c49a9e6419900.json  query-39541cf4790aac555ad45a2023f83fb7eb864e44c9bc0c92b7889d88880af4ec.json  query-41ede083a4bc985aafda35396cd5036ca0d35818260e7604ef789c702113def4.json  query-4a4c2542205a2438c8bb1b3aa6f287965bd11288deeda37a9c116e8d19476ce2.json  query-55df5a3c92d5a6eeda3131b71ebc904ab722fa272dd7712e91e19acd3df598b7.json  query-7051b2326ba24bec561ffd665b2a54b37216c26a296e334e246698e127aaf2fb.json  query-748399cd16ec2d47f114188fbfd0ebc9f50af288d4c1ab6392c803e18d676168.json  query-74de0241e2bfab3b3ac8ab808b4206340e2c179ef7af0dedb8854a271fb45fcb.json  query-96d31249f8afe52b53c16df0405d84cd6d7ba296d675258b59c59031233e1b22.json  query-9f09997e6687cdc962f24193a0cdae43497c9ff3a55c843c8679d8b36406a35b.json  query-ad3f3d82ee01c02b3aea9e13629d3b3a3ce62f363d8d70d85dc8affeb0ff0491.json  query-b142be621efea683933860a80afc3efad7bb6ed5f106fe4546a409d8787b46c9.json  query-b24aacad6329a327cdb651338f4368c02d1c05c1a8880830475db862b28012e0.json  query-b851d39560cce7c9f5663b7fafeca18cebb400d3b8421841402d4580580c70bc.json  query-dcd05467c49a63534a7fac7e3b1d22890b195de2a639add4e8893de64e629f69.json  query-ed8946ba676297d484007e496cd6eb94d0be7efcc31f1d24fc7237e056b3ee2a.json  query-f404f9dbec36c6532efab45c957d35023574634626917cc58efbc93cd9a20760.json
askld/: Cargo.toml  build.rs
askld/migrations_auth/2025-09-09-000001_create_auth_tables/: up.sql
askld/migrations_auth/2025-09-09-000002_add_api_key_expires_at/: down.sql  up.sql
askld/src/: all_tests.rs  askl.pest  auth.rs  cfg.rs  command.rs  dependency_test.rs  execution_context.rs  execution_state.rs  group_test.rs  hierarchy.rs  index_store.rs  lib.rs  offset_range.rs  parser.rs  parser_context.rs  parser_test.rs  proto.rs  scope.rs  span.rs  statement.rs  test_support.rs  test_util.rs  timeout_test.rs  tracing_instrumentation.rs  tree_browser_test.rs  type_filter_test.rs  verb.rs  verb_test.rs
askld/src/index_store/: mod.rs  query.rs  tests.rs  upload.rs
askld/src/statement/: mod.rs  parse.rs  scope_helpers.rs
askld/src/verb/: generic.rs  labels.rs  mod.rs  preamble.rs  tests.rs
askld/src/verb/generic/: ephemeral.rs  filters.rs  loc.rs  mod.rs  modifiers.rs  search.rs  selectors.rs
askld/tests/: auth_db.rs  mcp.rs
clang/: Cargo.toml
clang/src/: clang.rs
clang/tests/: clang-indexer.rs
create-index/: Cargo.toml
create-index/src/: main.rs
docker/askld/: Dockerfile  askld-entrypoint.sh
examples/: askl.rs
gen-ast/: Cargo.toml
gen-ast/src/: main.rs
index/: .env  Cargo.toml
index/src/: clang.rs  db.rs  db_diesel.rs  lib.rs  ltree.rs  models_diesel.rs  schema_diesel.rs  symbols.rs  symbols_test.rs
index/src/db_diesel/: cte.rs  index_impl.rs  mixins.rs  overlay.rs  selection.rs
index/tests/: clang-indexer.rs
lib/: askl.pest
migrations/2025-08-19-210512_create_tables/: down.sql  up.sql
migrations/2025-09-06-073904_add_file_id_to_symbol_refs/: down.sql  up.sql
migrations/2025-09-09-000001_create_auth_tables/: up.sql
migrations/2026-02-02-000001_symbol_path_trigger/: down.sql  up.sql
migrations/2026-02-10-000001_declarations_file_offset_gist/: down.sql  up.sql
migrations/2026-03-20-000001_composition_model/: down.sql  up.sql
migrations/2026-03-21-000001_modules_as_symbols/: down.sql  up.sql
migrations/2026-03-22-000001_directories_as_symbols/: down.sql  up.sql
migrations/2026-03-23-000001_symbol_type_dot_separator/: down.sql  up.sql
migrations/2026-03-27-000001_type_symbol_type/: down.sql  up.sql
migrations/2026-03-28-000001_data_symbol_type/: down.sql  up.sql
migrations/2026-03-29-000001_relax_symbol_uniqueness/: down.sql  up.sql
migrations/2026-03-29-000002_macro_symbol_type/: down.sql  up.sql
migrations/2026-04-04-000001_field_symbol_type/: down.sql  up.sql
migrations/2026-04-04-000002_instance_types/: down.sql  up.sql
migrations/2026-04-04-000003_instance_type_file/: down.sql  up.sql
migrations/2026-04-04-000004_instance_type_documentation/: down.sql  up.sql
migrations/2026-04-04-000005_content_store/: down.sql  up.sql
migrations/2026-04-07-000001_composite_project_path_gist/: down.sql  up.sql
migrations/2026-04-08-000001_leaf_name_column/: down.sql  up.sql
migrations/2026-04-24-000001_upload_workflow_and_indexes/: down.sql  up.sql
migrations/2026-05-05-000001_chunked_upload/: down.sql  up.sql
migrations/2026-05-08-000001_tree_indexes/: down.sql  up.sql
migrations/2026-05-14-000001_reserve_ephemeral_id_space/: down.sql  up.sql
migrations/2026-06-06-000001_eph_layers/: down.sql  up.sql
migrations/2026-06-07-000001_eph_layers_populated/: down.sql  up.sql
migrations/2026-06-14-000001_search_indexes_and_content_type/: down.sql  up.sql
migrations/2026-06-19-000002_content_store_lz4/: down.sql  up.sql
proto/: index.proto
sql/: create_tables.sql  test_input_a.sql  test_input_b.sql  test_input_containment.sql  test_input_modules.sql  test_input_nested_func.sql  test_input_search.sql  test_input_symbol_tokens.sql  test_input_tree_browser.sql  test_input_type_filter.sql  verb_test.sql
src/: asker.rs  askl.pest  cfg.rs  command.rs  execution_context.rs  executor.rs  index.rs  indexer.rs  language_server.rs  lib.rs  main.rs  parser.rs  schema.rs  scope.rs  search.rs  statement.rs  symbols.rs  verb.rs  web_server.rs
tests/: clang-indexer.rs
(+2 files in other folders)
