[package]
name = "askl"
version = "0.1.0"
authors = ["Maksym Planeta <mplaneta@os.inf.tu-dresden.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest="2.1"
pest_derive="2.1"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1.20.1", features = ["process", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
anyhow = "1.0.58"
lsp-types = "0.95.0"
url = "2.2.2"
serde = "1.0.140"
serde_json = "1.0.82"
jsonrpc-core = "18.0.0"
log = "0.4.17"
env_logger = "0.9.0"
console = "0.15.1"
indicatif = "0.17.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
itertools = "0.10.3"
shell-words = "1.1"
clang-ast = "0.1"
futures = "0.3"
actix-web = "4"
rand = "0.8.5"