[workspace]
resolver = "2"
members = ["index", "create-index", "askld", "gen-ast"]

[workspace.dependencies]
pest="2.8"
pest_derive="2.8"
clap = { version = "3.2", features = ["derive", "env"] }
tokio = { version = "1.48", features = ["process", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
anyhow = "1.0"
lsp-types = "0.95"
url = "2.2"
serde = "1.0"
serde_json = {version = "1.0", features = ["unbounded_depth"]}
serde_stacker = "0.1"
jsonrpc-core = "18.0"
log = "0.4"
env_logger = "0.9"
console = "0.15"
indicatif = "0.17"
itertools = "0.10"
shell-words = "1.1"
#clang-ast = "0.1"
clang-ast = "0.1"
futures = "0.3"
actix-web = "4"
rand = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros" ] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
prost = "0.12"
prost-build = "0.12"
protoc-bin-vendored = "3.0.0"
