[package]
name = "askld"
version = "0.1.1"
authors = ["Maksym Planeta <mplaneta@os.inf.tu-dresden.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pest = {workspace = true}
pest_derive = {workspace = true}
clap = {workspace = true}
tokio = {workspace = true}
anyhow = {workspace = true}
lsp-types = {workspace = true}
url = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
jsonrpc-core = {workspace = true}
log = {workspace = true}
env_logger = {workspace = true}
console = {workspace = true}
indicatif = {workspace = true}
itertools = {workspace = true}
shell-words = {workspace = true}
clang-ast = {workspace = true}
futures = {workspace = true}
actix-web = {workspace = true}
index = { path = "../index" }
async-trait = "0.1.80"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
chrono = "0.4.41"
tracing-actix-web = "0.7.19"
argon2 = "0.5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
uuid = { version = "1.10", features = ["v4"] }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
prost = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
testcontainers = "0.15"

[build-dependencies]
prost-build = { workspace = true }
